Completed the writeups.